--- a/index.html
+++ b/index.html
@@ -49,7 +49,22 @@
         </div>
     
         <div class="quote">
-    
+            <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quote-person">-Thor, God of Thunder</div>
+        </div>
+
+        <div class="call">
+            <div class="box">
+                <div class="call-left">
+                    <div class="box-head">Call to action! It's time!</div>
+                    <div class="box-txt">Sign up for our product by clicking that button right over there!</div>    
+                </div>
+                <button class="call-button">Sign up</button>
+            </div>
+        </div>
+
+        <div class="footer">
+            <div class="copyright">Copyright © The Odin Project 2021</div>
         </div>
     </div>
 
