Added images to template

--- a/index.html
+++ b/index.html
@@ -20,29 +20,37 @@
         <div class="hero">
             <div class="hero-left">
                 <div class="hero-main">This website is awesome</div>
-                <div class="hero-subtext">This website has some subtext and that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <div class="hero-subtext">This website has some subtext and that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
                 <button class="hero-button">Sign up</button>
             </div>
-            <div class="img-place">this is a placeholder for an image</div>
+            <img class="twice" src="./imgs/twice.jpg" alt="Picture of K-Pop group, Twice.">
         </div>
     
         <div class="info">
             <div class="info-header">Some random information.</div>
             <ul class="info-sections">
                 <div class="card">
-                    <div class="info-img"></div>
+                    <div class="info-img">
+                        <img class="kpop" src="./imgs/chaeyoung.jpg" alt="Picture of twice member, Chaeyoung.">
+                    </div>
                     <div class="info-txt">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="card">
-                    <div class="info-img"></div>
+                    <div class="info-img">
+                        <img class="kpop" src="./imgs/jihyo.jpg" alt="Picture of twice member, Jihyo.">
+                    </div>
                     <div class="info-txt">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="card">
-                    <div class="info-img"></div>
+                    <div class="info-img">
+                        <img class="kpop" src="./imgs/nayeon.jpg" alt="Picture of twice member, Nayeon.">
+                    </div>
                     <div class="info-txt">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="card">
-                    <div class="info-img"></div>
+                    <div class="info-img">
+                        <img class="kpop" src="./imgs/mina.jpg" alt="Picture of twice member, Mina.">
+                    </div>
                     <div class="info-txt">this is some subtext under an illustration or image</div>
                 </div>
             </ul>
