--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Twice's Landing Page<3</title>
     <link href="styles.css" rel="stylesheet">
 </head>
     
